--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -159,3 +159,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0;
     background-color: unset;
 }
+.tab-content.configs {
+    padding: 15px;
+    background-color: #FFF;
+}
