--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -174,3 +174,6 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff;
     border-radius: 55px;
 }
+.table-hover.table-click tbody tr {
+    cursor: pointer;
+}
