--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -160,8 +160,8 @@ h1, h2, h3, h4, h5, h6 {
     background-color: unset;
 }
 .tab-content.configs {
-    padding: 15px;
-    background-color: #FFF;
+    box-shadow: unset;
+    border: none;
 }
 .summary-icon.sse {
     margin-right: 15px;
@@ -215,4 +215,37 @@ h1, h2, h3, h4, h5, h6 {
 .unread {
     background-color: #ebebeb !important;
     font-weight: bold !important;
+}
+.nav-link.configs.left {
+    border-radius: 0.375rem 0 0 0.375rem !important;
+}
+.nav-link.configs.right {
+    border-radius: 0 0.375rem 0.375rem 0 !important;
+}
+.nav-link.configs {
+    border-radius: 0;
+}
+button.nav-link.configs {
+    color: white;
+    background-color: #0088CC;
+}
+.nav-pills-primary > li .nav-link.active.configs {
+    color: #FFF;
+    background-color: #006ba1;
+}
+.color-energy.active {
+    background: #ed9c28 !important;
+    color: #FFF !important;
+}
+.color-energy:hover {
+    background: #ed9c28 !important;
+    color: #FFF !important;
+}
+.color-agua.active {
+    background: #007bff !important;
+    color: #FFF !important;
+}
+.color-agua:hover {
+    background: #007bff !important;
+    color: #FFF !important;
 }
